# chess-engine

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: main.cpp
src/main/: Board.cpp  Board.hpp  Constants.hpp  FEN.cpp  FEN.hpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  MoveList.cpp  MoveList.hpp
src/test/: BoardTest.cpp  FENTest.cpp  MoveGeneratorTest.cpp  MoveListTest.cpp  MoveTest.cpp  generic_test.cpp
